# Algo_vs_Doc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
algo_vs_doc/: analysis.py  plots.py
data/: README.md
manuscript/: Enrolment.drawio
notebooks/: Algo versus Doc Analysis Combined.ipynb  Algo versus Doc Analysis LUMC.ipynb  Algo versus Doc Analysis VUmc.ipynb  Baseline characteristics.ipynb
tables/Combined/: algo_factor_categories.csv  algo_factors.csv  auc_differences_table.csv  baseline_characteristics.csv  correlation_table.csv  doc_factor_categories.csv  doc_factors.csv  performance_table.csv  performance_table_high_confidence.csv  performance_table_medium_low_confidence.csv
tables/LUMC/: algo_factor_categories.csv  algo_factors.csv  auc_differences_table.csv  correlation_table.csv  doc_factor_categories.csv  doc_factors.csv  performance_table.csv  performance_table_high_confidence.csv  performance_table_medium_low_confidence.csv
tables/VUmc/: algo_factor_categories.csv  algo_factors.csv  auc_differences_table.csv  correlation_table.csv  doc_factor_categories.csv  doc_factors.csv  performance_table.csv  performance_table_high_confidence.csv  performance_table_medium_low_confidence.csv
